--- a/application/user/view/admin/publics/signin.html
+++ b/application/user/view/admin/publics/signin.html
@@ -54,8 +54,8 @@
                         <div class="push-30-t push-50 animated fadeIn">
                             <!-- Login Title -->
                             <div class="text-center">
-                                <img src="__ADMIN_IMG__/logo-signin.png" alt="海豚PHP框架">
-                                <p class="text-muted push-15-t">海豚PHP框架</p>
+                               <!-- <img src="__ADMIN_IMG__/logo-signin.png" alt="海豚PHP框架">-->
+                                <p class="text-muted push-15-t">学生后台系统</p>
                             </div>
                             <!-- END Login Title -->
 
