--- a/plugins/DevTeam/view/widget.html
+++ b/plugins/DevTeam/view/widget.html
@@ -1,5 +1,5 @@
 <div class="col-md-{$width|default=6}">
-    <div class="block block-bordered">
+   <!--  <div class="block block-bordered">
         <div class="block-header bg-gray-lighter">
             <h3 class="block-title">产品团队</h3>
         </div>
@@ -44,5 +44,5 @@
                 </tbody>
             </table>
         </div>
-    </div>
+    </div> -->
 </div>
