--- a/application/admin/view/layout.html
+++ b/application/admin/view/layout.html
@@ -198,13 +198,14 @@
                         {notempty name="Think.config.web_site_logo"}
                         <img src="{$Think.config.web_site_logo|get_file_path}" class="logo" alt="{$Think.config.web_site_title|default='Dolphin PHP'}">
                         {else/}
-                        <img src="{$Think.config.public_static_path}admin/img/logo.png" class="logo" alt="Dolphin PHP">
+						贫困生档案后台系统
+                        <!-- <img src="{$Think.config.public_static_path}admin/img/logo.png" class="logo" alt="Dolphin PHP"> -->
                         {/notempty}
 
                         {notempty name="Think.config.web_site_logo_text"}
-                        <img src="{$Think.config.web_site_logo_text|get_file_path}" class="logo-text sidebar-mini-hide" alt="{$Think.config.web_site_title|default='Dolphin PHP'}">
+                       <img src="{$Think.config.web_site_logo_text|get_file_path}" class="logo-text sidebar-mini-hide" alt="{$Think.config.web_site_title|default='Dolphin PHP'}">
                         {else/}
-                        <img src="{$Think.config.public_static_path}admin/img/logo-text.png" class="logo-text sidebar-mini-hide" alt="Dolphin PHP">
+                       <!--  <img src="{$Think.config.public_static_path}admin/img/logo-text.png" class="logo-text sidebar-mini-hide" alt="Dolphin PHP"> -->
                         {/notempty}
                     </a>
                 </div>
